backend/error.log
file:///C:/Users/Hirdhay%20Jadhwani/OneDrive/Desktop/Ecom-Assignment/ice-scream-ecom-kori/backend/src/modules/orders/order.routes.js:2
import { postCheckout, getOrders, createRazorpayOrder, verifyRazorpayPayment } from './order.controller.js';
                                  ^^^^^^^^^^^^^^^^^^^
SyntaxError: The requested module './order.controller.js' does not provide an export named 'createRazorpayOrder'
    at #asyncInstantiate (node:internal/modules/esm/module_job:319:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:422:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:661:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.13.1
